Apply Fx25 tree-row fix to Windows only, and fix spacing there too
"height: auto" (from another extension's fix for this) actually caused
the bottoms of tree rows to be cut off on Windows (and at least on one
Linux installation with Chinese characters).

--- a/chrome/content/zotero-platform/win/overlay.css
+++ b/chrome/content/zotero-platform/win/overlay.css
@@ -67,6 +67,13 @@
 	-moz-border-left-colors: none;
 }
 
+/* Undo tree row spacing change in Fx25 on Windows */
+#zotero-collections-tree treechildren::-moz-tree-row,
+#zotero-items-tree treechildren::-moz-tree-row,
+#zotero-prefs treechildren::-moz-tree-row {
+	height: 20px;
+}
+
 #zotero-collections-tree {
 	border-width: 0 1px 1px 0;
 }
